# discord-transfer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/discord_transfer/: archive.py  cli.py  importer.py
